src/main/default/objects/OnBase_Document_Settings__c/OnBase_Document_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>OnBase Document Settings</label>
</CustomObject>