src/main/default/objects/OnBase_Document_Settings__c/fields/OnBaseDocumentEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>OnBaseDocumentEndDateTime__c</fullName>
    <description>This field is to define the end range for Onbase document selection</description>
    <label>OnBaseDocumentEndDateTime</label>
    <type>DateTime</type>
</CustomField>