src/main/default/objects/OnBase_Document_Settings__c/fields/OnBaseDocumentStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>OnBaseDocumentStartDateTime__c</fullName>
    <description>This field is to define the start range for Onbase document selection</description>
    <label>OnBaseDocumentStartDateTime</label>
    <type>DateTime</type>
</CustomField>