src/main/default/objects/OnBase_Document_Settings__c/fields/SelectDocumentDateTime__c.field-meta.xml
<CustomField>
    <fullName>SelectDocumentDateTime__c</fullName>
    <description>Used for query performance</description>
    <label>SelectDocumentDateTime</label>
    <type>DateTime</type>
</CustomField>